2009-03-18  Lars Hartmann  <lars (at) chaotika (dot) org>

	* include/util.h: removed lputil_strndup.
	* src/liblputil.c: removed lputil_strndup.

2009-03-17  Lars Hartmann  <lars (at) chaotika (dot) org>

	Added replacement function for strndup:
	* replace/strndup.c: added.
	* replace/Makefile.am: added.
	* configure.ac: added replacement-test for strndup
	* Makefile.am (SUBDIRS): added path to replacement lib.
	* src/Makefile.am (libportage_la_LIBADD): added replacement lib.

	Cleaned up Build Framework:
	* Makefile.am (SUBDIRS): renamed t to test
	* configure.ac (AC_CONFIG_AUX_DIR): changed to put most config
	files into config/.
	(AC_CONFIG_FILES): renamed t to test.
	removed unnecessary header checks.
	* t: renamed to test.
	* acinclude.m4: set default DOXYGEN settings.

2009-03-16  Lars Hartmann  <lars (at) chaotika (dot) org>

	Added some files to the distribution:
	* Makefile.am (EXTRA_DIST): added doxygen.cfg.
	* doc/Makefile.am (EXTRA_DIST): added xpak.txt.

	Added Doxygen support to build framework:
	* Makefile.am: included aminclude.am.
	* doc/doxygen/api-doc: moved to doxygen.cfg.
	* doxygen.cfg: replaced constants with DX_ macros.
	* configure.ac: added DX_ macros.
	* acinclude.m4: added.
	* aminclude.am: added.

	* configure.ac: small format fix.

	* doc/.gitignore: added.

	* doc/Requirements.txt: updated Requirements.

	Updated preprocessor macros:
	* src/liblpatom.c: updated formatting of preprocessor macros.
	* include/common.h: updated formatting of preprocessor macros.

2009-03-13  Lars Hartmann  <lars (at) chaotika (dot) org>

	Moved doxygen dir and modified doxyfile for api-doc:
	* doxygen/: moved to doc/doxygen.
	* doc/doxygen/api-doc (INPUT): removed src/ dir from api-doc.
	(FILE_PATTERNS): let api-doc only document header files.

	* configure.ac: added AC_C_CONST and AC_C_INLINE.

	* TODO: updated TODO.

	* README: replaced stub with content.

	Switched Project to 2clause BSD License:
	* t/02_lpxpak_parse.c: added license header.