@@ -1,3 +1,7 @@
+2009-03-19  Lars Hartmann  <lars (at) chaotika (dot) org>
+
+	* test/01_lpatom_parse.c (main): fixed identing.
+
 2009-03-18  Lars Hartmann  <lars (at) chaotika (dot) org>
 
 	* include/util.h: removed lputil_strndup.
